Refactor tests. Add MocitoExtension dependency.